<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WKGVertretungsplan</string>
    <string name="refresh">Aktualisieren</string>
    <string name="preferences">Einstellungen</string>
    <string name="general">Allgemein</string>
    <string name="about">Über</string>
    <string name="author">Autor</string>
    <string name="authorName">Daniel Grothe</string>
    <string name="version">Version</string>
    <string name="versionNumber">1.3.1.2</string>
    <string name="prefLoginTitle">Login-Namen eingeben</string>
    <string name="prefLoginDialogTitle">Login-Namen eingeben</string>
    <string name="prefLoginSummary">Der Login-Name</string>
    <string name="prefPasswordDialogTitle">Passwort eingeben</string>
    <string name="prefPasswordTitle">Passwort</string>
    <string name="prefPasswordSummary">Das Passwort</string>
    <string name="prefSaveBMPTitle">Vertretungsplan speichern</string>
    <string name="prefSaveBMPSummary">Aktuellen Plan auf dem Gerät speichern</string>
    <string name="prefCheckForUpdateOnCreateTitle">Nach Update suchen</string>
    <string name="prefCheckForUpdateOnCreateSummary">Beim Start prüfen, ob Update vorhanden ist</string>
    <string name="prefCheckForUpdateTitle">Jetzt nach Update suchen</string>
    <string name="prefCheckForUpdateSummary">Suche jetzt nach einem Update</string>
    <string name="errorSaveBMP">Fehler beim Speichern des Vertretungsplans</string>
    <string name="errorAccessSchedule">Fehler. Überprüfen Sie die Zugangsdaten!</string>
    <string name="prefChangelogTitle">Changelog</string>
    <string name="prefChangelogSummary">Changelog anzeigen</string>
    <string name="preferenceLabel">Einstellungen</string>
    <string name="prefSendMailTitle">Mail an den Entwickler</string>
    <string name="prefSendMailSummary">Kontaktiere den Entwickler</string>
    <string name="prefEnableAnalyticsTitle">Analytics aktivieren</string>
    <string name="prefEnableAnalyticsSummary">Trage zur anonymen Nutzungsstatistik bei</string>
    <string name="askForAnalyticsTitle">Senden von Nutzungsstatistiken</string>
    <string name="askForAnalyticsMessage">Um zu erfahren, in welchem Maße diese App genutzt wird, können anonyme Nutzungsberichte an den Entwickler gesendet werden. Diese Berichte fallen äußerst minimalistisch aus und sind in keinster Weise auf den Nutzer zurückzuführen! Die Entscheidung kann jederzeit in den Einstellungen verändert werden. Darf die App solche Berichte senden?</string>
    <string name="askForAnalyticsYes">Erlauben</string>
    <string name="askForAnalyticsNo">Nicht erlauben</string>
    <string name="appearance">Aussehen</string>
    <string name="tabVertretungsplanName">Vertretungsplan</string>
    <string name="tabKlausurplanName">Klausurplan</string>
    <string name="htmlBodyTop"><![CDATA[<html><head></head><body><img src=\"data:image/gif;base64,]]></string>
    <string name="htmlBodyBot"><![CDATA[\" style=\"display: block; margin-left: auto; margin-right: auto;\" /></body></html>]]></string>
	<string name="EventCategory">VertretungsplanEvent</string>
	<string name="eventSwipeView">EventSwipeView</string>
	<string name="eventRefresh">EventRefresh</string>
    <string-array name="prefThemeEntries">
        <item>Dunkel</item>
        <item>Hell</item>
        <item>Hell mit dunkler ActionBar</item>
    </string-array>
    <string-array name="prefThemeEntryValues">
        <item>dark</item>
        <item>light</item>
        <item>light_darkActionBar</item>
    </string-array>
    <string name="prefThemeTitle">Theme</string>
    <string name="prefThemeSummary">Theme auswählen</string>
	
</resources>