<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:key="general" android:title="@string/general">
        <EditTextPreference android:dialogTitle="Login-Namen eingeben" android:key="login" android:summary="Der Login-Name" android:title="Login" android:singleLine="true"/>
        <EditTextPreference android:dialogTitle="Passwort eingeben" android:key="password" android:title="Passwort" android:summary="Das Passwort" android:inputType="textPassword"/>
        <CheckBoxPreference android:key="autoRefresh" android:title="Auto-Refresh" android:summary="Automatischer Refresh beim Aufrufen der App"/>
        <CheckBoxPreference android:title="Vertretungsplan speichern" android:summary="Plan speichern, um nicht ständig neu laden zu müssen" android:key="saveBmp"/>
        <CheckBoxPreference android:key="checkForUpdateOnCreate" android:summary="Beim Start prüfen, ob Update vorhanden ist." android:title="Nach Update suchen"/>
        <Preference android:key="checkForUpdate" android:title="Jetzt nach Update suchen" android:summary="Suche jetzt nach einem Update"/>   
    </PreferenceCategory>
    <PreferenceCategory android:key="about" android:title="@string/about">
        <Preference android:summary="@string/authorName" android:key="author" android:title="@string/author"/>
        <Preference android:key="version" android:title="@string/version" android:summary="@string/versionNumber"/>
    </PreferenceCategory>
    

</PreferenceScreen>